--- a/www/contact.html
+++ b/www/contact.html
@@ -12,6 +12,24 @@
         <title>Hello World</title>
     </head>
     <body>
+        <div class="navbar-fixed">
+            <nav class="pink darken-4">
+                <div class="nav-wrapper container">
+                    <a href="#!" class="brand-logo"><img src="./img/palm-tree-logo.png" id='logo' alt="Holiday News"></a>
+                    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="index.html">News</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="information.html">About us</a></li>
+                    </ul>
+                </div>
+            </nav>
+            </div>
+            <ul class="sidenav" id="mobile-demo">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="information.html">About us</a></li>
+            </ul>
         
         <script src="js/jquery-3.6.0.js"></script>
         <script src="cordova.js"></script>
