--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,12 @@
     <script src="cordova.js"></script>
     <script src="js/index.js"></script>
     <script src="js/materialize.js"></script>
+    <script type="text/javascript">
+        document.addEventListener("deviceready", function() {
+            var deviceinfo = "cordova:" + device.cordova + "<br>Model:" + device.model + "<br>UUID:" + device.uuid + "<br>Platform:" + device.platform + "(" + device.version + ")";
+            document.getElementById("deviceInfoText").innerHTML = deviceinfo;
+        }, false);
+    </script>
    
 </body>
 
