--- a/www/blog.html
+++ b/www/blog.html
@@ -1,39 +1,117 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"> 
-        <meta content="telephone=no" name="format-detection">
-        <meta content="no" name="msapplication-tap-highlight">
-        <meta content="initial-scale=1, width=device-width, viewport-fit=cover" name="viewport">
-        <meta content="light dark" name="color-scheme">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link href="css/materialize.css" rel="stylesheet">
-        <link href="css/index.css" rel="stylesheet">
-        <title>Hello World</title>
-    </head>
-    <body>
-        <div class="navbar-fixed">
-            <nav class="pink darken-4">
-                <div class="nav-wrapper container">
-                    <a href="#!" class="brand-logo"><img src="./img/palm-tree-logo.png" id='logo' alt="Holiday News"></a>
-                    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                    <ul class="right hide-on-med-and-down">
-                        <li><a href="index.html">News</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="information.html">About us</a></li>
-                    </ul>
-                </div>
-            </nav>
+
+<head>
+    <meta charset="utf-8">
+    <meta content="telephone=no" name="format-detection">
+    <meta content="no" name="msapplication-tap-highlight">
+    <meta content="initial-scale=1, width=device-width, viewport-fit=cover" name="viewport">
+    <meta content="light dark" name="color-scheme">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="css/materialize.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+    <title>Hello World</title>
+</head>
+
+<body>
+    <div class="navbar-fixed">
+        <nav class="pink darken-4">
+            <div class="nav-wrapper container">
+                <a href="#!" class="brand-logo"><img src="./img/palm-tree-logo.png" id='logo' alt="Holiday News"></a>
+                <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="index.html">News</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="information.html">About us</a></li>
+                </ul>
             </div>
-            <ul class="sidenav" id="mobile-demo">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="information.html">About us</a></li>
-            </ul>
-        
-        <script src="js/jquery-3.6.0.js"></script>
-        <script src="cordova.js"></script>
-        <script src="js/index.js"></script>
-        <script src="js/materialize.js"></script>
-    </body>
+        </nav>
+    </div>
+    <ul class="sidenav" id="mobile-demo">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="information.html">About us</a></li>
+    </ul>
+    <section>
+        <div class="container">
+            <div id="articles"></div>
+        </div>
+    </section>
+    <section>
+        <div class="container">
+            <div id="articlesDetails"></div>
+        </div>
+    </section>
+
+
+    <script src="js/jquery-3.6.0.js"></script>
+    <script src="cordova.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/materialize.js"></script>
+    <script>
+        var articleManager = new function () {
+
+            this.showArticleElt = function () {
+                $.ajax({
+                    url: "http://localhost:5557/articles", // La ressource ciblée, pour Android utiliser http://10.0.2.2:5556/personnes/
+                    type: "GET", // Le type de la requête HTTP,
+                    cache: false, // n'enregistre pas temporairement des copies de données
+                    dataType: 'json', //  Le type de données à recevoir, ici, du json
+                    success: function (data) {
+                        console.log(data);
+                        $.each(data, function (index, article) {
+                            $('<div id=articles-elt>')
+                                .append('<div class="row">')
+                                .append('<div class="col s10 m6">')
+                                .append('<div class="card">')
+                                .append('<div class="card-image"><span class="card-title">' + article.libelle + '</span><br>')
+                                .append('<img src="' + article.urlPhotoPr + '"><br>')
+                                .append('<span>' + article.description1 + '</span><br>')
+                                .append("<button class='waves-effect waves-light btn moreinfo' onclick=\"articleManager.showArticleDetails(\'" + article.id + "\');\" >More</button>")
+                                .append('</div>')
+                                .append('</div>')
+                                .append('</div>')
+                                .append('</div>')
+                                .appendTo($('#articles'))
+                        });
+
+                    }
+                });
+                this.showArticleDetails = function (id) {
+                    $.ajax({
+                        url: "http://localhost:5557/articles", // La ressource ciblée, pour Android utiliser http://10.0.2.2:5556/personnes/
+                        type: "GET", // Le type de la requête HTTP,
+                        cache: false, // n'enregistre pas temporairement des copies de données
+                        dataType: 'json', //  Le type de données à recevoir, ici, du json
+                        success: function (article) {
+                            console.log(data);
+                            $.each(data, function (article) {
+                                $('<div id=articles-elt>')
+                                    .append('<div class="row">')
+                                    .append('<div class="col s10 m6">')
+                                    .append('<div class="card">')
+                                    .append('<div class="card-image"><span class="card-title">' + article.libelle + '</span><br>')
+                                    .append('<img src="' + article.urlPhotoPr + '"><br>')
+                                    .append('<span>' + article.description1 + '</span><br>')
+                                    .append("<button class='waves-effect waves-light btn moreinfo' onclick=\"articleManager.showArticleDetails(\'" + article.id + "\');\" >More</button>")
+                                    .append('</div>')
+                                    .append('</div>')
+                                    .append('</div>')
+                                    .append('</div>')
+                                    .appendTo($('#articles'))
+                            });
+
+                        }
+                    });
+                },
+
+
+                    $(document).ready(function () {
+                        articleManager.showArticleElt();
+                    })
+            }
+
+    </script>
+</body>
+
 </html>
