--- a/www/index.html
+++ b/www/index.html
@@ -33,49 +33,55 @@
         <li><a href="information.html">About us</a></li>
     </ul>
     <section class="situation">
-    <div class = "container">
-        <div class="row">
-            <h3 class="homeTitle">Situation actuel</h3>
-            <div class="col s4">
-                <ul>
-                    <li><strong>les sorties sont autorisées dans un rayon de 10km autour de son domicile (calculez ici
-                            la
-                        </strong>zone précise que vous pouvez parcourir) sur présentation d’un justificatif de domicile
-                        ou de
-                        l’attestation de déplacement ;</li>
-                    <li><strong> pas de déplacement en journée au-delà de 10 km sauf motif impérieux ou
-                            professionnel</strong> (sur présentation
-                        de l’attestation) ;</li>
-                </ul>
-            </div>
-            <div class="col s4">
-                <ul>
-                    <li><strong>un couvre-feu en vigueur à 19h sur tout le territoire métropolitain </strong>: les
-                        sorties et
-                        déplacements sans attestations dérogatoires sont interdits de 19h00 à 06h00, sous peine d’une
-                        amende de
-                        135 € et jusqu’à 3750 € en cas de récidive ; les établissements autorisés à ouvrir ne pourront
-                        plus
-                        accueillir de public après 19h00 ;</li>
-                </ul>
-            </div>
-            <div class="col s4">
-                <ul>
-                    <li><strong>aucun déplacement inter-régionaux n'est autorisé après le lundi 5 avril</strong>,
-                        sauf motif
-                        impérieux, incluant les motifs familiaux pour, par exemple, accompagner un enfant chez un parent
-                        ;
-                    <strong></li>
+        <div class="container">
+            <div class="row">
+                <h3 class="homeTitle">Situation actuel</h3>
+                <div class="col s4">
+                    <ul>
+                        <li><strong>les sorties sont autorisées dans un rayon de 10km autour de son domicile (calculez
+                                ici
+                                la
+                            </strong>zone précise que vous pouvez parcourir) sur présentation d’un justificatif de
+                            domicile
+                            ou de
+                            l’attestation de déplacement ;</li>
+                        <li><strong> pas de déplacement en journée au-delà de 10 km sauf motif impérieux ou
+                                professionnel</strong> (sur présentation
+                            de l’attestation) ;</li>
+                    </ul>
+                </div>
+                <div class="col s4">
+                    <ul>
+                        <li><strong>un couvre-feu en vigueur à 19h sur tout le territoire métropolitain </strong>: les
+                            sorties et
+                            déplacements sans attestations dérogatoires sont interdits de 19h00 à 06h00, sous peine
+                            d’une
+                            amende de
+                            135 € et jusqu’à 3750 € en cas de récidive ; les établissements autorisés à ouvrir ne
+                            pourront
+                            plus
+                            accueillir de public après 19h00 ;</li>
+                    </ul>
+                </div>
+                <div class="col s4">
+                    <ul>
+                        <li><strong>aucun déplacement inter-régionaux n'est autorisé après le lundi 5 avril</strong>,
+                            sauf motif
+                            impérieux, incluant les motifs familiaux pour, par exemple, accompagner un enfant chez un
+                            parent
+                            ;
+                            <strong>
+                        </li>
                         <li>possibilité de retour en France pour les Français de l’étranger;
-                    </strong></li>
-                    <strong>
-                        <li>la possibilité de trajets pour les travailleurs transfrontaliers.
-                    </strong></li>
-                </ul>
-            </div>
+                            </strong></li>
+                        <strong>
+                            <li>la possibilité de trajets pour les travailleurs transfrontaliers.
+                        </strong></li>
+                    </ul>
+                </div>
 
+            </div>
         </div>
-    </div>
     </section>
     <section class="notreoffre">
         <div class="picturerestriction">
